--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
   text-decoration: none;
   user-select: none;
 }
+.container{
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
